examples/scanner/literals/fail/invalid_octal.axo
const bad = "\8"
print(bad)
